<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Spinner
	    android:id="@+id/muses_spinner"
	    android:layout_width="match_parent"
	    android:layout_height="60dp"
        android:layout_marginLeft="20dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/refresh"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="@string/refresh"
            android:layout_marginLeft="20dp" />
	    <Button
	        android:id="@+id/connect"
	        android:layout_width="100dp"
	        android:layout_height="40dp"
	        android:text="@string/connect" />
	    <Button
	        android:id="@+id/disconnect"
	        android:layout_width="120dp"
	        android:layout_height="40dp"
	        android:text="@string/disconnect" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="Save Settings"
            android:id="@+id/save" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Port Num:"
        android:id="@+id/textView3"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="81dp"
        android:layout_height="wrap_content"
        android:id="@+id/ti_port"
        android:text="5000"
        android:layout_marginLeft="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="IP Address:"
        android:id="@+id/textView"
        android:layout_marginLeft="20dp" />

    <EditText
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:id="@+id/ti_ip"
        android:text="10.1.1.1"
        android:layout_marginLeft="20dp" />

    <TextView
   		android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="1"
    	android:textSize="16sp"
    	android:text="@string/status"
        android:layout_marginLeft="20dp" />
  	<TextView
    	android:id="@+id/con_status"
   		android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_weight="1"
    	android:textSize="16sp"
    	android:text="@string/undefined"
        android:layout_marginLeft="20dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:textSize="16sp"
        android:text="@string/eeg"
        android:layout_marginLeft="20dp" />
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal" >
        <TextView
            android:id="@+id/eeg_tp9"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:textSize="16sp"
	        android:text="@string/init_val"
            android:layout_marginLeft="20dp" />
        <TextView
            android:id="@+id/eeg_fp1"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:textSize="16sp"
	        android:text="@string/init_val" />
        <TextView
            android:id="@+id/eeg_fp2"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:textSize="16sp"
	        android:text="@string/init_val" />
        <TextView
            android:id="@+id/eeg_tp10"
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:textSize="16sp"
	        android:text="@string/init_val" />
    </LinearLayout>

    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="horizontal" >

        </LinearLayout>
   		 <TextView
	   		android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:textSize="16sp"
	    	android:text="@string/muse_elem"
             android:layout_marginLeft="20dp" />
   		<LinearLayout
        	android:layout_width="match_parent"
        	android:layout_height="match_parent"
        	android:layout_weight="1"
        	android:orientation="horizontal" >
	        <TextView
	            android:id="@+id/elem1"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textSize="16sp"
		        android:text="@string/init_val"
                android:layout_marginLeft="20dp" />
	        <TextView
	            android:id="@+id/elem2"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textSize="16sp"
		        android:text="@string/init_val"
                android:layout_marginLeft="20dp" />
	        <TextView
	            android:id="@+id/elem3"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textSize="16sp"
		        android:text="@string/init_val"
                android:layout_marginLeft="20dp" />
	        <TextView
	            android:id="@+id/elem4"
		        android:layout_width="match_parent"
		        android:layout_height="match_parent"
		        android:layout_weight="1"
		        android:textSize="16sp"
		        android:text="@string/init_val"
                android:layout_marginLeft="20dp" />
	    </LinearLayout>
   	    <TextView
	   		android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:textSize="16sp"
	    	android:text="@string/version"
            android:layout_marginLeft="20dp" />
   	    <TextView
   	        android:id="@+id/version"
	   		android:layout_width="match_parent"
	    	android:layout_height="match_parent"
	    	android:layout_weight="1"
	    	android:textSize="16sp"
	    	android:text="@string/undefined"
            android:layout_marginLeft="20dp" />
		<LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="45dp"
	        android:orientation="horizontal" >
	        <Button
	            android:id="@+id/pause"
	            android:layout_width="150dp"
	            android:layout_height="40dp"
	            android:text="@string/pause"
                android:layout_marginLeft="20dp" />

        </LinearLayout>

</LinearLayout>